--- a/css/login_design.css
+++ b/css/login_design.css
@@ -3,13 +3,17 @@ background-color:#eab676;
 margin:0px auto;
 }
 .headers{
-font-size:40px;
+font-size:50px;
 text-align:center;
 }
 
+p{
+font-size:50px;
+}
+
 .login{
-width:560px;
-height:250px;
+width:800px;
+height:800px;
 border:2px solid red;
 margin:0 auto;
 text-align:center;
@@ -37,22 +41,22 @@ background-color:yellow;
 font-weight:bold;
 }
 input[type=text]{
-font-size:20px;
+font-size:50px;
 text-align:center
 }
 
 input[type=password]{
-font-size:20px;
+font-size:50px;
 text-align:center;
 }
 
 input[type=submit]{
-font-size:20px;
+font-size:50px;
 text-align:center;
 }
 
 .error p{
 text-align:center;
-font-size:18px;
+font-size:50px;
 color:red;
 }
